@@ -4,7 +4,7 @@
  *  This file is part of the OpenLink Software Virtuoso Open-Source (VOS)
  *  project.
  *
- *  Copyright (C) 1998-2018 OpenLink Software
+ *  Copyright (C) 1998-2023 OpenLink Software
  *
  *  This project is free software; you can redistribute it and/or modify it
  *  under the terms of the GNU General Public License as published by the
@@ -116,8 +116,8 @@ class VirtuosoFuture
          vector[4] = null;
       vector[3] = rpcname;
       vector[2] = null;
-      vector[1] = new Integer(req_no);
-      vector[0] = new Integer(VirtuosoTypes.DA_FUTURE_REQUEST);
+      vector[1] = Integer.valueOf(req_no);
+      vector[0] = Integer.valueOf(VirtuosoTypes.DA_FUTURE_REQUEST);
       // Serialize data and flush the stream
       connection.write_object(new openlink.util.Vector(vector));
    }
