@@ -4,7 +4,7 @@
  *  This file is part of the OpenLink Software Virtuoso Open-Source (VOS)
  *  project.
  *
- *  Copyright (C) 1998-2018 OpenLink Software
+ *  Copyright (C) 1998-2023 OpenLink Software
  *
  *  This project is free software; you can redistribute it and/or modify it
  *  under the terms of the GNU General Public License as published by the
@@ -162,7 +162,7 @@ class VirtuosoInputStream extends BufferedInputStream
              case VirtuosoTypes.DV_NULL:
                    {
                      //System.out.println("DV_NULL");
-                     return new Short((short)0); //null; because off absence of TAG_BOX in O12
+                     return Short.valueOf((short)0); //null; because off absence of TAG_BOX in O12
                    }
              case VirtuosoTypes.DV_DB_NULL:
                    {
@@ -188,7 +188,7 @@ class VirtuosoInputStream extends BufferedInputStream
                      int n = readint();
                      Object[] array = new Object[(int)n];
                      for(int i = 0;i < n;i++)
-                       array[i] = new Long(readlongint());
+                       array[i] = Long.valueOf(readlongint());
                      res = new VectorOfLong(array);
                      //System.out.print("DV_ARRAY_OF_LONG");
 		     //System.out.println (res.toString());
@@ -201,7 +201,7 @@ class VirtuosoInputStream extends BufferedInputStream
                      int n = readint();
                      Object[] array = new Object[(int)n];
                      for(int i = 0;i < n;i++)
-                       array[i] = new Long(readlongint());
+                       array[i] = Long.valueOf(readlongint());
                      res = new VectorOfLong(array);
                      //System.out.print("DV_ARRAY_OF_LONG_PACKED: ");
 		     //System.out.println (res.toString());
@@ -213,7 +213,7 @@ class VirtuosoInputStream extends BufferedInputStream
                      int n = readint();
                      Object[] array = new Object[(int)n];
                      for(int i = 0;i < n;i++)
-                       array[i] = new Double(readdouble());
+                       array[i] = Double.valueOf(readdouble());
                      res = new VectorOfDouble(array);
                      //System.out.print("DV_ARRAY_OF_DOUBLE: ");
 		     //System.out.println (res.toString());
@@ -225,7 +225,7 @@ class VirtuosoInputStream extends BufferedInputStream
                      int n = readint();
                      Object[] array = new Object[(int)n];
                      for(int i = 0;i < n;i++)
-                       array[i] = new Float(readfloat());
+                       array[i] = Float.valueOf(readfloat());
                      res = new VectorOfFloat(array);
                      //System.out.print("DV_ARRAY_OF_FLOAT: ");
 		     //System.out.println (res.toString());
@@ -329,7 +329,7 @@ class VirtuosoInputStream extends BufferedInputStream
              case VirtuosoTypes.DV_SINGLE_FLOAT:
                    {
                      //System.out.println("DV_SINGLE_FLOAT");
-                     res = new Float(readfloat());
+                     res = Float.valueOf(readfloat());
                      //System.out.print("DV_SINGLE_FLOAT: ");
 		     //System.out.println (res.toString());
                      return res;
@@ -337,7 +337,7 @@ class VirtuosoInputStream extends BufferedInputStream
              case VirtuosoTypes.DV_DOUBLE_FLOAT:
                    {
                      //System.out.println("DV_DOUBLE_FLOAT");
-                     res = new Double(readdouble());
+                     res = Double.valueOf(readdouble());
                      //System.out.print("DV_DOUBLE_FLOAT: ");
 		     //System.out.println (res.toString());
                      return res;
@@ -348,7 +348,7 @@ class VirtuosoInputStream extends BufferedInputStream
 		     int ret = readshortint();
 		     if (ret > 127)
 		       ret = ret - 256;
-                     res = new Short((short)ret);
+                     res = Short.valueOf((short)ret);
                      //System.out.print("DV_SHORT_INT: ");
 		     //System.out.println (res.toString());
                      return res;
@@ -356,7 +356,7 @@ class VirtuosoInputStream extends BufferedInputStream
              case VirtuosoTypes.DV_LONG_INT:
                    {
                      //System.out.println("DV_LONG_INT");
-                     res = new Integer(readlongint());
+                     res = Integer.valueOf(readlongint());
                      //System.out.print("DV_LONG_INT: ");
 		     //System.out.println (res.toString());
                      return res;
@@ -439,13 +439,13 @@ class VirtuosoInputStream extends BufferedInputStream
                    }
              case VirtuosoTypes.DV_IRI_ID:
                    {
-                     res = new Integer(readlongint());
+                     res = Integer.valueOf(readlongint());
                      return res;
                    }
              case VirtuosoTypes.DV_IRI_ID_8:
              case VirtuosoTypes.DV_INT64:
                    {
-                     res = new Long(readlong());
+                     res = Long.valueOf(readlong());
                      return res;
                    }
 	     case VirtuosoTypes.DV_RDF:
@@ -751,16 +751,6 @@ class VirtuosoInputStream extends BufferedInputStream
         if (0 != (flags & VirtuosoRdfBox.RBS_COMPLETE)){
             is_complete = true;
             box = read_object ();
-            if (type == VirtuosoRdfBox.RDF_BOX_GEO_TYPE) {
-                if (box instanceof String && ((String)box).length()>5  && ((String)box).substring(0,5).equalsIgnoreCase("point")) {
-                    String data = ((String)box).substring(6);
-                    try {
-                        box = new VirtuosoPoint(data.substring(0, data.length()-1));
-                    } catch (Exception e){
-                        throw new VirtuosoException(e, VirtuosoException.IOERROR);
-                    }
-                }
-            }
         }
 
       } else {
