@@ -3,7 +3,7 @@
  *  This file is part of the OpenLink Software Virtuoso Open-Source (VOS)
  *  project.
  *
- *  Copyright (C) 1998-2018 OpenLink Software
+ *  Copyright (C) 1998-2023 OpenLink Software
  *
  *  This project is free software; you can redistribute it and/or modify it
  *  under the terms of the GNU General Public License as published by the
@@ -48,7 +48,6 @@ public class VirtuosoPreparedStatement extends VirtuosoStatement implements Prep
    // The sql string with ?
    protected String sql;
    private static final int _EXECUTE_FAILED = Statement.EXECUTE_FAILED;
-   protected VirtuosoResultSet ps_vresultSet;
 
    /**
     * Constructs a new VirtuosoPreparedStatement that is forward-only and read-only.
@@ -87,12 +86,13 @@ public class VirtuosoPreparedStatement extends VirtuosoStatement implements Prep
 	      Object[] args = new Object[4];
 	      args[0] = (statid == null) ? statid = new String("ps" + connection.hashCode() + (req_no++)) : statid;
 	      args[1] = connection.escapeSQL(sql);
-	      args[2] = new Long(0);
+	      args[2] = Long.valueOf(0);
 	      args[3] = getStmtOpts();
 	      // Create a future
 	      future = connection.getFuture(VirtuosoFuture.prepare,args, this.rpc_timeout);
 	      // Process result to get information about results meta data
-	      ps_vresultSet = vresultSet = new VirtuosoResultSet(this,metaData, true);
+	      vresultSet = new VirtuosoResultSet(this,metaData, true);
+	      vresultSet.getMoreResults(true);
 	      result_opened = true;
               clearParameters();
 	    }
@@ -147,6 +147,9 @@ public class VirtuosoPreparedStatement extends VirtuosoStatement implements Prep
              connection.removeFuture(future);
              future = null;
            }
+	
+	 vresultSet.is_complete = true;
+
 	 // Set arguments to the RPC function
 	 args[0] = statid;
 	 args[2] = (cursorName == null) ? args[0] : cursorName;
@@ -160,10 +163,8 @@ public class VirtuosoPreparedStatement extends VirtuosoStatement implements Prep
 	     // Put the options array in the args array
 	     args[5] = getStmtOpts();
 	     future = connection.getFuture(VirtuosoFuture.exec,args, this.rpc_timeout);
-             ps_vresultSet.isLastResult = false;
-	     ps_vresultSet.getMoreResults(false);
-             ps_vresultSet.stmt_n_rows_to_get = this.prefetch;
-             vresultSet = ps_vresultSet;
+             vresultSet = new VirtuosoResultSet(this,metaData, true, vresultSet.kindop());
+ 	     vresultSet.getMoreResults(false);
 	     result_opened = true;
 	   }
 	 catch(IOException e)
@@ -319,14 +320,6 @@ public class VirtuosoPreparedStatement extends VirtuosoStatement implements Prep
 
 
    /**
-    * Method runs when the garbage collector want to erase the object
-    */
-   public void finalize() throws Throwable
-   {
-      close();
-   }
-
-   /**
     * Releases this Statement object's database
     * and JDBC resources immediately instead of new wait for
     * this to happen when it is automatically closed.
@@ -349,6 +342,8 @@ public class VirtuosoPreparedStatement extends VirtuosoStatement implements Prep
      if(close_flag)
        return;
 
+     connection.removeStmtFromClose(this);
+
      synchronized (connection)
        {
 	 try
@@ -362,7 +357,7 @@ public class VirtuosoPreparedStatement extends VirtuosoStatement implements Prep
 	     // Build the args array
 	     Object[] args = new Object[2];
 	     args[0] = statid;
-	     args[1] = new Long(VirtuosoTypes.STAT_DROP);
+	     args[1] = Long.valueOf(VirtuosoTypes.STAT_DROP);
 	     // Create and get a future for this
 	     future = connection.getFuture(VirtuosoFuture.close,args, this.rpc_timeout);
 	     // Read the answer
@@ -612,7 +607,7 @@ public class VirtuosoPreparedStatement extends VirtuosoStatement implements Prep
       // Check parameters
       if(parameterIndex < 1 || parameterIndex > parameters.capacity())
          throw new VirtuosoException("Index " + parameterIndex + " is not 1<n<" + parameters.capacity(),VirtuosoException.BADPARAM);
-      objparams.setElementAt(new Boolean(x),parameterIndex - 1);
+      objparams.setElementAt(Boolean.valueOf(x),parameterIndex - 1);
    }
 
    /**
@@ -629,7 +624,7 @@ public class VirtuosoPreparedStatement extends VirtuosoStatement implements Prep
       // Check parameters
       if(parameterIndex < 1 || parameterIndex > parameters.capacity())
          throw new VirtuosoException("Index " + parameterIndex + " is not 1<n<" + parameters.capacity(),VirtuosoException.BADPARAM);
-      objparams.setElementAt(new Byte(x),parameterIndex - 1);
+      objparams.setElementAt(Byte.valueOf(x),parameterIndex - 1);
    }
 
    /**
@@ -686,7 +681,7 @@ public class VirtuosoPreparedStatement extends VirtuosoStatement implements Prep
       // Check parameters
       if(parameterIndex < 1 || parameterIndex > parameters.capacity())
          throw new VirtuosoException("Index " + parameterIndex + " is not 1<n<" + parameters.capacity(),VirtuosoException.BADPARAM);
-      objparams.setElementAt(new Double(x),parameterIndex - 1);
+      objparams.setElementAt(Double.valueOf(x),parameterIndex - 1);
    }
 
    /**
@@ -703,7 +698,7 @@ public class VirtuosoPreparedStatement extends VirtuosoStatement implements Prep
       // Check parameters
       if(parameterIndex < 1 || parameterIndex > parameters.capacity())
          throw new VirtuosoException("Index " + parameterIndex + " is not 1<n<" + parameters.capacity(),VirtuosoException.BADPARAM);
-      objparams.setElementAt(new Float(x),parameterIndex - 1);
+      objparams.setElementAt(Float.valueOf(x),parameterIndex - 1);
    }
 
    /**
@@ -720,7 +715,7 @@ public class VirtuosoPreparedStatement extends VirtuosoStatement implements Prep
       // Check parameters
       if(parameterIndex < 1 || parameterIndex > parameters.capacity())
          throw new VirtuosoException("Index " + parameterIndex + " is not 1<n<" + parameters.capacity(),VirtuosoException.BADPARAM);
-      objparams.setElementAt(new Integer(x),parameterIndex - 1);
+      objparams.setElementAt(Integer.valueOf(x),parameterIndex - 1);
    }
 
    /**
@@ -737,7 +732,7 @@ public class VirtuosoPreparedStatement extends VirtuosoStatement implements Prep
       // Check parameters
       if(parameterIndex < 1 || parameterIndex > parameters.capacity())
          throw new VirtuosoException("Index " + parameterIndex + " is not 1<n<" + parameters.capacity(),VirtuosoException.BADPARAM);
-      objparams.setElementAt(new Long(x),parameterIndex - 1);
+      objparams.setElementAt(Long.valueOf(x),parameterIndex - 1);
    }
 
    /**
@@ -865,7 +860,7 @@ public class VirtuosoPreparedStatement extends VirtuosoStatement implements Prep
       // Check parameters
       if(parameterIndex < 1 || parameterIndex > parameters.capacity())
          throw new VirtuosoException("Index " + parameterIndex + " is not 1<n<" + parameters.capacity(),VirtuosoException.BADPARAM);
-      objparams.setElementAt(new Short(x),parameterIndex - 1);
+      objparams.setElementAt(Short.valueOf(x),parameterIndex - 1);
    }
 
    /**
